# rglclock

./: .gitignore  .hgignore  .hgtags  AUTHORS  COPYING.LIB  ChangeLog  MEMO.ja  Makefile.am  Makefile.in  NEWS  README  README.ja  THANKS  TODO  VERSION-ID  about.cc  acconfig.h  aclocal.m4  autowidget.h  azure-pipelines.yml  clockoptions.cc  config.h.in  configure  configure.ac  configure.in  gdkgl.h  glclock.cc  glclock.h  gtkrc  ltconfig  main.cc  meson.build  module.cc  module.h  options.cc  options.h  profile.cc  profile.cpp  profile.h  rglclock.1  (+5 more)
.github/workflows/: release.yml
doc/: Makefile.am  Makefile.in  rglclock.info  rglclock.texi  rglclock.xml  texinfo.tex  version.texi
gdkGL/: Makefile.am  Makefile.in  gdkGL.c  gdkGL.h  gdkGL_gdkutils.c  gdkGL_gdkutils.h  gdkGLcontext.c  gdkGLprivate.h  gdkGLtypes.h
gnu/aclocal/: gnulib-cache.m4
include/: Makefile.am  Makefile.in  autowidget.h  g_ptr.h  gl_context.h  glclock.h  module.h  rglclockmod.h  simple.h  utils.h
lib/: Makefile.am  Makefile.in  about.cc  clock.h  clock_options.cpp  clockoptions.cc  g_ptr.h  gdk_gl.cc  gdk_gl.h  gdkgl.c  glclock.cc  glclock.cpp  glgdkx.cpp  glgdkx.h  glgtk.cpp  glgtk.h  mat4.c  mat4.h  meson.build  modaldialog.cc  module.cc  module.cpp  movement.cpp  options.cc  rglclockmod.h  simple.c  simple.h  utils.h
libgnu/: Makefile.am
libgnu/m4/: gnulib-cache.m4  gnulib-comp.m4
m4/: ChangeLog  gnulib-cache.m4  gnulib-comp.m4
modules/: Makefile.am  Makefile.in  simple.c
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  en.po  en@boldquot.po  en@quot.po  ja.eucjp.po  ja.gmo  ja.po  ja_JP.eucJP.po  meson.build  rglclock.pot
programs/: Makefile.am  Makefile.in  about.cpp  about.h  clock.cpp  clock.h  glgtk.cpp  glgtk.h  main.cc  meson.build  modaldialog.cpp  options-0.dtd  options.cpp  profile.cc  profile.cpp  profile.h  rglclock.cpp
testsuite/: Makefile.am
testsuite/config/: unix.exp
testsuite/rglclock.0/: ChangeLog  options.exp
