dnl Process this file with autoconf to produce a configure script.
AC_INIT(glclock.cc)
dnl $Format: "AM_INIT_AUTOMAKE($Project$, $ProjectVersion$)" $
AM_INIT_AUTOMAKE(rglclock, 0.15)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AM_PROG_LIBTOOL

dnl Checks for libraries.
AM_PATH_GTK
AC_SUBST(GL_LIBS)dnl
AC_CHECK_LIB(MesaGL, glClear, GL_LIBS="-lMesaGL $GL_LIBS",, $GL_LIBS $GTK_LIBS)
AC_CHECK_LIB(MesaGLU, gluLookAt, GL_LIBS="-lMesaGLU $GL_LIBS",, $GL_LIBS $GTK_LIBS)

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.
AC_STRUCT_TM
AC_C_CONST

dnl Checks for library functions.

AC_OUTPUT(Makefile gdkGL/Makefile)
